# holochain

./: .cirrus.yml  .cirrys.yml  .cursorignore  .env  .envrc  .gitignore  .hc  .hc_live_0  .testbeats.json  AGENTS.md  CHANGELOG-UNRELEASED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PRINCIPLES.md  README.md  RELEASE.md  RELEASE_TEST_LOG.md  agents.sql  assessment-get-options-issue-5422.md  cargo-update.sh  chisel  config.nix  configure-cache.sh  default.nix  design-data-logic-rework.md  drone-swarm.happ  feature-list.md  flake.nix  garnix.yaml  install.sh  local-cache.sh  maackle-rate-limiting-notes.md  package-lock.json  problem_tests.txt  release.toml  rust-toolchain.toml  rust.nix  (+7 more)
crates/address/: Cargo.toml
crates/address/src/: lib.rs  prelude.rs
crates/address_derive/: Cargo.toml
crates/address_derive/src/: lib.rs
crates/address_types/: Cargo.toml
crates/address_types/src/: lib.rs
crates/admin/: Cargo.toml
crates/admin/src/: app.rs  calls.rs  create.rs  lib.rs  main.rs  run.rs  scripts.rs
crates/admin/src/scripts/: cmds.rs
crates/aitia/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
crates/aitia/src/: cause.rs  dep.rs  fact.rs  graph.rs  lib.rs  logging.rs  report.rs  test_fact.rs  tests.rs  traversal.rs
crates/client/: CHANGELOG.md  Cargo.toml  README.md
crates/client/fixture/: test.happ
crates/client/src/: admin_websocket.rs  app_websocket.rs  app_websocket_inner.rs  error.rs  lib.rs  signing.rs  util.rs
crates/client/src/signing/: client_signing.rs  lair_signing.rs
crates/client/tests/: admin.rs  app.rs  clone_cell.rs
crates/client/tests/common/: mod.rs
crates/client/tests/fixture/: mod.rs
crates/conductor_api/: Cargo.toml
crates/conductor_api/src/: cell.rs  conductor.rs  error.rs  external.rs  interface.rs  internal.rs  lib.rs
crates/conductor_lib/: Cargo.toml
crates/conductor_lib/src/: api.rs  conductor.rs  config.rs  error.rs  lib.rs  protocol.rs  test_fixtures.rs
crates/conductor_lib/src/api/: api_cell.rs  api_external.rs  mod.rs
crates/conductor_lib/src/cell/: cell.rs
crates/conductor_lib/src/conductor/: conductor.rs  mod.rs
crates/conductor_lib/src/config/: config.rs  mod.rs
crates/conductor_lib/src/interface/: channel.rs  handler.rs  interface.rs  mod.rs  puppet.rs
crates/core/: Cargo.toml
crates/core/src/: attr.rs  cell.rs  conductor_api.rs  cursor.rs  error.rs  lib.rs  ribosome.rs  shims.rs  types.rs
crates/core/src/agent/: agent_id.rs  error.rs  mod.rs  snapshot.rs  source_chain.rs  validity.rs
crates/core/src/cell/: autonomic.rs  (+2 more)
crates/core_types/: Cargo.toml
crates/core_types/src/: agent.rs  error.rs  lib.rs  rpc.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: api.rs  bytes.rs  error.rs  lib.rs  macros.rs  plugin.rs  sodium.rs
crates/diagnostic_tests/: CHANGELOG.md  Cargo.toml
crates/diagnostic_tests/examples/: commit_loop.rs  join_race.rs  link_storm.rs  link_storm_1.rs  simsyn.rs  ui_demo.rs
crates/diagnostic_tests/src/: lib.rs  zomes.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: cell.rs  conductor.rs  display.rs  main.rs  wasm.rs
crates/dna_util/: Cargo.toml  README.md
crates/dna_util/src/: lib.rs
crates/dpki/: Cargo.toml
crates/dpki/src/: key_blob.rs  key_bundle.rs  keypair.rs  lib.rs  password_encryption.rs  seed.rs  utils.rs
crates/export_ts/: Cargo.toml  types.ts
crates/export_ts/src/: main.rs
crates/ffs/: Cargo.toml
crates/ffs/src/: io_error.rs  lib.rs
crates/fixt/: CHANGELOG.md  Cargo.toml  README.md
crates/fixt/src/: bool.rs  bytes.rs  lib.rs  number.rs  prelude.rs  rng.rs  serialized_bytes.rs  string.rs  unit.rs  unsigned.rs
crates/fixt/test/: CHANGELOG.md  Cargo.toml
crates/fixture/: Cargo.toml
crates/fixture/src/: lib.rs
crates/ghost_websocket/: Cargo.toml
crates/ghost_websocket/src/: error.rs  lib.rs  util.rs  websocket.rs  websocket_listener.rs  websocket_receiver.rs  websocket_sender.rs
crates/ghost_websocket/tests/: integration.rs
crates/hc/: CHANGELOG.md  Cargo.toml  README.md
crates/hc-sleuth/: Cargo.toml  plan.md
crates/hc-sleuth/src/: cause.rs  context.rs  context_db.rs  context_log.rs  event.rs  fact.rs  holochain.rs  inference.rs  lib.rs  main.rs  query.rs  report.rs  step.rs  test_fact.rs  tests.rs
crates/hc/examples/: setup_5_properties.rs
crates/hc/src/: app.rs  calls.rs  cmds.rs  conductor_config.rs  config.rs  create.rs  db_explorer.rs  dna.rs  external_subcommands.rs  generate.rs  lib.rs  ports.rs  run.rs  save.rs  scripts.rs
crates/hc/tests/: cli.rs
crates/hc_bundle/: CHANGELOG.md  Cargo.toml  README.md
crates/hc_bundle/schema/: dna-manifest-unstable-migration.schema.json  dna-manifest.schema.json  happ-manifest.schema.json  web-happ-manifest.schema.json
crates/hc_bundle/src/: cli.rs  dna.rs  error.rs  init.rs  lib.rs  packing.rs
crates/hc_bundle/tests/: test_cli.rs
crates/hc_cli_util/: Cargo.toml  README.md
crates/hc_cli_util/src/: lib.rs
crates/hc_client/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/hc_client/src/: calls.rs  cli.rs  context.rs  lib.rs  zome_call.rs
crates/hc_client/tests/: integration.rs
crates/hc_deepkey_sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/hc_deepkey_sdk/src/: lib.rs
crates/hc_deepkey_types/: CHANGELOG.md  Cargo.toml  README.md
crates/hc_deepkey_types/src/: app_binding.rs  authority_spec.rs  authorized_spec_change.rs  change_rule.rs  key_anchor.rs  key_meta.rs  key_registration.rs  keyset_root.rs  lib.rs
crates/hc_demo_cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/hc_demo_cli/src/: build_coordinator_wasm.rs  build_demo.rs  coordinator_wasm.rs  demo.rs  integrity_wasm.rs  lib.rs  test.rs
crates/hc_demo_cli/tests/: demo.rs
test_utils/: Cargo.toml  LICENSE
test_utils/src/: lib.rs  mock_signing.rs
test_utils/wasm/: Cargo.toml  README.md  build.rs
test_utils/wasm/debug/: Cargo.toml
test_utils/wasm/foo/: Cargo.toml  foo.rs
test_utils/wasm/imports/: Cargo.toml  imports.rs
test_utils/wasm/src/: lib.rs
test_utils/wasm_common/: Cargo.toml
test_utils/wasm_common/src/: common.rs
(+4519 files in other folders)
