[workspace]
members = [
  "crates/fixt",
  "crates/fixt/test",
  "crates/hdk",
  "crates/hdk_derive",
  "crates/holo_hash",
  "crates/hdi",
  "crates/mock_hdi",
  "crates/mr_bundle",

  "crates/holochain_integrity_types",
  "crates/holochain_zome_types",
  "crates/holochain_types",
  "crates/holochain",
  "crates/holochain_cascade",
  "crates/holochain_chc",
  "crates/holochain_conductor_api",
  "crates/holochain_p2p",
  "crates/holochain_keystore",
  "crates/holochain_state",
  "crates/holochain_state_types",
  "crates/holochain_sqlite",
  "crates/holochain_trace",
  "crates/holochain_websocket",
  "crates/holochain_util",
  "crates/holochain_metrics",
  "crates/holochain_nonce",
  "crates/holochain_secure_primitive",
  "crates/holochain_conductor_services",

  "crates/hc_deepkey_sdk",
  "crates/hc_deepkey_types",

  "crates/hc",
  "crates/hc_bundle",
  "crates/hc_sandbox",
  "crates/hc_run_local_services",
  "crates/hc_demo_cli",
  "crates/hc_service_check",
  "crates/holochain_terminal",

  "crates/kitsune_p2p/bootstrap",
  "crates/kitsune_p2p/bootstrap_client",
  "crates/kitsune_p2p/dht",
  "crates/kitsune_p2p/dht_arc",
  "crates/kitsune_p2p/fetch",
  "crates/kitsune_p2p/kitsune_p2p",
  "crates/kitsune_p2p/mdns",
  "crates/kitsune_p2p/proxy",
  "crates/kitsune_p2p/timestamp",
  "crates/kitsune_p2p/types",

  "crates/test_utils/wasm",
  "crates/test_utils/wasm_common",
]

exclude = ["crates/release-automation"]

resolver = "2"

[workspace.dependencies]
# !!!
# WARNING - PUT NOTHING HERE
# !!!
#
# release automation currently cannot handle workspace.dependencies
# it will publish unbuildable releases to crates.io

[workspace.lints.clippy]
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(build_wasm)',
  'cfg(loom)',
] }

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 2
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release]
opt-level = "z"
lto = true

[patch.crates-io]
# holochain_deepkey_dna = { path = "../deepkey/crates/holochain_deepkey_dna" }

# task-motel = { path = "../task-motel" }
# proptest = { path = "/home/michael/gitfork/proptest/proptest" }
# proptest = { git = "https://github.com/maackle/proptest", branch = "arbitrary-pathbuf" }

# influxive-child-svc = { path = "../influxive/crates/influxive-child-svc" }
# influxive-otel = { path = "../influxive/crates/influxive-otel" }
# contrafact = { git = "https://github.com/maackle/contrafact-rs.git", branch = "lambda" }
tx5 = { path = "../tx5/crates/tx5" }
tx5-core = { path = "../tx5/crates/tx5-core" }
tx5-go-pion = { path = "../tx5/crates/tx5-go-pion" }
tx5-go-pion-sys = { path = "../tx5/crates/tx5-go-pion-sys" }
tx5-go-pion-turn = { path = "../tx5/crates/tx5-go-pion-turn" }
tx5-signal = { path = "../tx5/crates/tx5-signal" }
# sbd-e2e-crypto-client = { path = "../sbd/rust/sbd-e2e-crypto-client" }
# sbd-server = { path = "../sbd/rust/sbd-server" }
# tx5 = { git = "https://github.com/holochain/tx5.git", rev = "f0f009f77a84c96c2acded6b27df27ece3f7dbbb" }
# tx5-signal = { git = "https://github.com/holochain/tx5.git", rev = "f0f009f77a84c96c2acded6b27df27ece3f7dbbb" }
# tx5-go-pion-turn = { git = "https://github.com/holochain/tx5.git", rev = "f0f009f77a84c96c2acded6b27df27ece3f7dbbb" }
# isotest = { git = "https://github.com/maackle/isotest-rs.git" }
# holochain_wasmer_host = { path = "../holochain-wasmer/crates/host" }
# holochain_wasmer_guest = { git = "https://github.com/holochain/holochain-wasmer.git", rev = "2fc225add8c72cbe49e458a2431c8069c9e405ec" }
# holochain_wasmer_host = { git = "https://github.com/holochain/holochain-wasmer.git", rev = "2fc225add8c72cbe49e458a2431c8069c9e405ec" }
# holochain_wasmer_common = { git = "https://github.com/holochain/holochain-wasmer.git", rev = "2fc225add8c72cbe49e458a2431c8069c9e405ec" }
# holochain_serialized_bytes = { git = "https://github.com/holochain/holochain-serialization.git", branch = "proptest" }
# holochain_serialized_bytes_derive = { git = "https://github.com/holochain/holochain-serialization.git", branch = "develop" }
#ghost_actor = { path = "../ghost_actor/crates/ghost_actor" }
# lair_keystore_api = { path = "../lair/crates/lair_keystore_api" }
#lair_keystore = { path = "../lair/crates/lair_keystore" }
#lair_keystore_api_0_0 = { path = "../lair_0_0/crates/lair_keystore_api", package = "lair_keystore_api" }
#lair_keystore_client_0_0 = { path = "../lair_0_0/crates/lair_keystore_client", package = "lair_keystore_client" }
#lair_keystore_api = { git = "https://github.com/holochain/lair.git", branch = "secretbox" }
#lair_keystore_api_0_0 = { git = "https://github.com/holochain/lair.git", branch = "release-0.0.x-bump-sodoken", package = "lair_keystore_api" }
#lair_keystore_client_0_0 = { git = "https://github.com/holochain/lair.git", branch = "release-0.0.x-bump-sodoken", package = "lair_keystore_client" }
# r2d2_sqlite = { path = "../r2d2-sqlite" }
