[workspace]
members = [
  "crates/fixt",
  "crates/fixt/test",
  "crates/hdk",
  "crates/hdk_derive",
  "crates/holo_hash",
  "crates/hdi",
  "crates/mock_hdi",
  "crates/mr_bundle",

  "crates/holochain_integrity_types",
  "crates/holochain_zome_types",
  "crates/holochain_types",
  "crates/holochain",
  "crates/holochain_cascade",
  "crates/holochain_chc",
  "crates/holochain_conductor_api",
  "crates/holochain_p2p",
  "crates/holochain_keystore",
  "crates/holochain_state",
  "crates/holochain_state_types",
  "crates/holochain_sqlite",
  "crates/holochain_trace",
  "crates/holochain_websocket",
  "crates/holochain_util",
  "crates/holochain_metrics",
  "crates/holochain_nonce",
  "crates/holochain_secure_primitive",
  "crates/holochain_conductor_config",
  "crates/timestamp",

  "crates/client",
  "crates/hc",
  "crates/hc_bundle",
  "crates/hc_sandbox",
  "crates/hc_service_check",
  "crates/holochain_terminal",

  "crates/test_utils/wasm",
  "crates/test_utils/wasm_common",
]

exclude = ["crates/release-automation"]

resolver = "2"

[workspace.dependencies]
# !!!
# WARNING - PUT NOTHING HERE
# !!!
#
# release automation currently cannot handle workspace.dependencies
# it will publish unbuildable releases to crates.io

[workspace.lints.clippy]
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(build_wasm)',
  'cfg(loom)',
] }

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 2
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release]
opt-level = "z"
lto = true

[patch.crates-io]
# kitsune2_api = { path = "../kitsune2/crates/api" }
# kitsune2_core = { path = "../kitsune2/crates/core" }
# kitsune2 = { path = "../kitsune2/crates/kitsune2" }
# kitsune2_dht = { path = "../kitsune2/crates/dht" }
# kitsune2_gossip = { path = "../kitsune2/crates/gossip" }
# kitsune2_bootstrap_srv = { path = "../kitsune2/crates/bootstrap_srv" }
# kitsune2_bootstrap_client = { path = "../kitsune2/crates/bootstrap_client" }
# sbd-server = { path = "../sbd/rust/sbd-server" }
# sbd-client = { path = "../sbd/rust/sbd-client" }
# sbd-e2e-crypto-client = { path = "../sbd/rust/sbd-e2e-crypto-client" }
# tx5-core = { path = "../tx5/crates/tx5-core" }
# tx5 = { path = "../tx5/crates/tx5" }
# task-motel = { path = "../task-motel" }
# influxive-child-svc = { path = "../influxive/crates/influxive-child-svc" }
# influxive-otel = { path = "../influxive/crates/influxive-otel" }
# holochain_wasmer_host = { path = "../holochain-wasmer/crates/host" }
# holochain_wasmer_guest = { git = "https://github.com/holochain/holochain-wasmer.git", rev = "2fc225add8c72cbe49e458a2431c8069c9e405ec" }
# holochain_wasmer_host = { git = "https://github.com/holochain/holochain-wasmer.git", rev = "2fc225add8c72cbe49e458a2431c8069c9e405ec" }
# holochain_wasmer_common = { git = "https://github.com/holochain/holochain-wasmer.git", rev = "2fc225add8c72cbe49e458a2431c8069c9e405ec" }
# holochain_serialized_bytes = { git = "https://github.com/holochain/holochain-serialization.git", branch = "proptest" }
# holochain_serialized_bytes_derive = { git = "https://github.com/holochain/holochain-serialization.git", branch = "develop" }
# lair_keystore_api = { path = "../lair/crates/lair_keystore_api" }
# lair_keystore = { path = "../lair/crates/lair_keystore" }
# r2d2_sqlite = { path = "../r2d2-sqlite" }
