[package]
name = "test_utils"
version = "0.0.42-alpha5"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "holochain test utils"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
edition = "2018"

[dependencies]
hdk = { version = "0.0.42-alpha5" }
holochain_net = { version = "0.0.42-alpha5" }
holochain_core = { version = "0.0.42-alpha5" }
holochain_conductor_lib = { version = "0.0.42-alpha5" }
sx_dpki = { path = "../crates/dpki" }
sx_types = { path = "../crates/types" }
holochain_wasm_utils = { version = "0.0.42-alpha5" }
holochain_locksmith = { version = "0.0.43-alpha3" }
holochain_persistence_api = "0.0.17"
holochain_json_api = "0.0.23"
holochain_json_derive = "0.0.23"
lib3h_sodium = "0.0.38"
wabt = "0.7.4"
tempfile = "3.0.7"
serde = "1.0.89"
serde_json = { version = "1.0.39", features = ["preserve_order"] }
serde_derive = "1.0.89"
crossbeam-channel = "0.3.8"
lazy_static = "1.4.0"
jsonrpc-ws-server = "14.0.1"
base64 = "0.10.1"
url = { version = "2.1.0", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
