[package]
name = "sx_test_utils"
version = "0.0.42-alpha5"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "Holochain test utils"
license = "GPL-3.0-only"
homepage = "https://github.com/Holo-host/holochain-2020"
documentation = "https://github.com/Holo-host/holochain-2020"
edition = "2018"

[dependencies]
hdk = { version = "0.0.42-alpha5" }
holochain_net = { version = "0.0.42-alpha5" }
holochain_core = { version = "0.0.42-alpha5" }
# sx_dpki = { path = "../crates/dpki" }
sx_types = { path = "../crates/types" }
holochain_wasm_utils = { version = "0.0.42-alpha5" }
holochain_locksmith = { version = "0.0.43-alpha3" }
holochain_json_api = { version = "0.0.36", git = "https://github.com/holochain/holochain-serialization.git", branch = "unpinned" }
holochain_json_derive = { version = "0.0.36", git = "https://github.com/holochain/holochain-serialization.git", branch = "unpinned" }
lib3h_sodium = "0.0.38"
wabt = "0.7.4"
tempfile = "3.0.7"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48", features = ["preserve_order"] }
crossbeam-channel = "0.3.8"
lazy_static = "1.4.0"
jsonrpc-ws-server = "14.0.1"
base64 = "0.10.1"
url = { version = "2.1.0", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
