[package]
name = "sx_address"
version = "0.0.1"
description = "Holochain addresses"
license = "GPL-3.0-only"
homepage = "https://github.com/Holo-host/holochain-2020"
documentation = "https://github.com/Holo-host/holochain-2020"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
multihash = "=0.10.1"
sx_address_derive = { version = "=0.0.1", path = "../address_derive" }
sx_zome_types = { version = "=0.0.1", path = "../zome_types" }
