[package]
name = "sx_address_derive"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "Provides derive macros for holochain addresses."
edition="2018"
keywords = ["holochain", "holo", "bytes", "serde", "derive"]
categories = ["parsing"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_json_derive"
repository = "https://github.com/holochain/holochain-serialization"

[lib]
proc-macro = true

[dependencies]
syn = "=0.15.31"
quote = "=0.6.11"
