[package]
name = "aitia"
version = "0.2.0-beta-dev.6"
description = "Library for making sense of events in terms of causal graphs"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/hc_sleuth"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo" ]
edition = "2021"

[dependencies]
anyhow = "1.0"
derive_more = { workspace = true }
holochain_trace = { version = "^0.3.0-beta-dev.8", path = "../holochain_trace" }
parking_lot = "0.10"
petgraph = "0.6"
regex = "1"
tracing = { workspace = true }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tracing-core = { version = "0.1", optional = true }
tracing-serde = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
maplit = "1"
pretty_assertions = "1.4"
test-case = "2.1"

[lints]
workspace = true

[features]
default = ["tracing"]

tracing = [
    "serde",
    "serde_json",
    "tracing-core",
    "tracing-serde",
    "tracing-subscriber",
]
