[package]
name = "aitia"
version = "0.2.2-rc.0"
description = "Library for making sense of events in terms of causal graphs"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/hc_sleuth"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo" ]
edition = "2021"

# reminder - do not use workspace deps
[dependencies]
anyhow = "1.0"
derive_more = "0.99"
holochain_trace = { version = "^0.3.2-rc.0", path = "../holochain_trace" }
parking_lot = "0.12"
petgraph = "0.6"
regex = "1"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing-core = { version = "0.1", optional = true }
tracing-serde = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
maplit = "1"
pretty_assertions = "1.4"
test-case = "3.3"

[lints]
workspace = true

[features]
default = ["tracing"]

tracing = [
    "serde",
    "serde_json",
    "tracing-core",
    "tracing-serde",
    "tracing-subscriber",
]
