[package]
name = "skunkworx_conductor_lib"
version = "0.0.1"
description = "holochain core"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1.22"
skunkworx_core = { path = "../core"}
futures = "0.3.1"
parking_lot = "0.10.0"
