[package]
name = "sx_conductor_lib"
version = "0.0.1"
description = "holochain core"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1.22"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
sx_core = { path = "../core"}
sx_dpki = { path = "../dpki" }
sx_keystore = { path = "../keystore"}
sx_types = { path = "../types"}
holochain_common = "0.0.42-alpha5"
futures = "0.3.1"
parking_lot = "0.10.0"
toml = "0.5.0"
petgraph = "0.5.0"
boolinator = "2.4.0"
thiserror = "1.0.10"
log = "0.4.8"
base64 = "0.10.1"
mockall = "0.6.0"

# TODO: can't hook up metrics until a version is pushed for the lazy_static=1.4.0 update
# holochain_metrics = { version = "0.0.42-alpha5" }

[dev-dependencies]

# TODO: this brings in too many assumptions from the previous version,
# but there is a lot of useful stuff here, so will have to refactor all of this later
# test_utils = { version = "0.0.42-alpha5", path = "../../test_utils" }
