[package]
name = "sx_core"
version = "0.0.1"
description = "holochain core skunkworx"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1.22"
crossbeam-channel = "0.4.0"
hcid = "=0.0.6"
futures = "0.3.1"
sx_types = { path = "../types" }
serde = "=1.0.89"
serde_json = "=1.0.39"
serde_derive = "=1.0.89"
holochain_persistence_api = "=0.0.13"
holochain_json_api = "=0.0.17"
holochain_json_derive = "=0.0.17"

[patch.crates-io]
holochain_persistence_api = { version = "=0.0.13", git = "https://github.com/holochain/holochain-persistence.git", branch = "upgrade-to-real-futures" }
holochain_json_api = { version = "=0.0.17", git = "https://github.com/holochain/holochain-serialization.git", branch = "upgrade-to-real-futures" }
holochain_json_derive = { version = "=0.0.17", git = "https://github.com/holochain/holochain-serialization.git", branch = "upgrade-to-real-futures" }
