[package]
name = "sx_core"
version = "0.0.1"
description = "holochain core skunkworx"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1.24"
crossbeam-channel = "0.4.0"
hcid = "0.0.6"
futures = "0.3.1"
sx_state = { path = "../state" }
sx_types = { path = "../types" }
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
shrinkwraprs = "0.3.0"
holochain_common = "0.0.43-alpha3"
holochain_json_api = "0.0.23"
holochain_json_derive = "0.0.23"
holochain_persistence_api = "0.0.17"
holochain_persistence_lmdb = "0.0.17"
lmdb-rkv = { git = "https://github.com/holochain/lmdb-rs.git", branch = "reverse-iterator" }
fallible-iterator = "0.2.0"
thiserror = "1.0.10"
lazy_static = "1.4.0"
chrono = "0.4.6"
tempdir = "0.3.7"
mockall = "0.6.0"
tokio = { version = "0.2.11", features = ["macros", "rt-threaded", "rt-util", "sync"] }
owning_ref = "0.4.1"
anyhow = "1.0.26"
parking_lot = "0.10.0"
toml = "0.5.0"
petgraph = "0.5.0"
boolinator = "2.4.0"
base64 = "0.10.1"

[dev-dependencies]
anyhow = "1.0.26"
