[package]
name = "skunkworx_core_types"
version = "0.0.1"
description = "holochain core skunkworx"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.0"
futures = "0.3.1"
snowflake = "1.3.0"
shrinkwraprs = "0.3.0"
log = "0.4.8"
