[package]
name = "skunkworx_core_types"
version = "0.0.1"
description = "holochain core skunkworx"
license = "GPL-3.0-only"
homepage = "https://github.com/holochain/holochain-rust"
documentation = "https://github.com/holochain/holochain-rust"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.0"
futures = "0.3.1"
snowflake = "1.3.0"
shrinkwraprs = "0.3.0"
holochain_json_api = "=0.0.17"
holochain_json_derive = "=0.0.17"
holochain_persistence_api = "=0.0.11"
hcid = "=0.0.6"
log = "0.4.8"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
