[package]
name = "holochain_crypto"
version = "0.0.1"
description = "libsodium wrapper providing memory secure api access"
license = "Apache-2.0"
homepage = "https://github.com/Holo-host/holochain"
documentation = "https://github.com/Holo-host/holochain"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "nacl", "libsodium", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
futures = "0.3"
lazy_static = "1"
libc = "0.2"
once_cell = "1.3.1"

rust_sodium_holochain_fork-sys = "=0.10.4"
thiserror = "1"
tokio = { version = "0.2", features = [ "full" ] }

[dev-dependencies]
blake2b_simd = "0.5.10"
