[package]
name = "diagnostic_tests"
version = "0.1.0"
description = "Collection of human-runnable, human-interpretable diagnostic situations for Holochain"
license = "Apache-2.0"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo" ]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chashmap = "2.2"
colored = "2"
futures = { workspace = true }
kitsune_p2p = { version = "^0.3.0-beta-dev.32", path = "../kitsune_p2p/kitsune_p2p" }
holochain_diagnostics = { path = "../holochain_diagnostics" }
holochain_trace = { version = "^0.3.0-beta-dev.7", path = "../holochain_trace" }
tokio = { workspace = true }
tokio-stream = "0.1"

crossterm = "0.27"
tui = "0.19"

[lints]
workspace = true
