[package]
name = "diagnostic_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
chashmap = "2.2"
colored = "2"
futures = "*"
holochain_diagnostics = { path = "../holochain_diagnostics" }
holochain_trace = { version = "^0.2.7", path = "../holochain_trace" }
tokio = { version = "1.27", features = ["full"] }
tokio-stream = "*"

crossterm = "*"
tui = "*"
