[package]
name = "diagnostics"
version = "0.1.0"
authors = ["Michael Dougherty <maackle.d@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
anyhow = "1.0"
fallible-iterator = "0.2"
holochain = { path = "../holochain" }
holochain_keystore = { path = "../keystore"}
holochain_state = { path = "../state"}
holochain_types = { path = "../types"}
rkv = "0.10.4"
structopt = "0.3"
tokio = { version = "0.3.3", features = [ "full" ] }


[patch.crates-io]

rkv = { git = "https://github.com/holochain/rkv.git", branch = "master" }
lmdb-rkv = { git = "https://github.com/holochain/lmdb-rs.git" }
