[package]
name = "dna_util"
version = "0.0.1"
description = "Holochain DnaFile Utility."
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://github.com/holochain/holochain"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo" ]
categories = [ "command-line-utilities", "development-tools::build-utils", "filesystem" ]
edition = "2018"

[dependencies]
holo_hash = { version = "0.0.1", path = "../holo_hash" }
holochain = { path = "../holochain", default-features = false }
holochain_serialized_bytes = "=0.0.48"
holochain_types = { version = "0.0.1", path = "../holochain_types" }
holochain_zome_types = { version = "0.0.1", path = "../holochain_zome_types" }
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_yaml = "0.8"
structopt = "0.3.11"
thiserror = "1.0.22"
tokio = { version = "0.2", features = [ "full" ] }

[dev-dependencies]
tempdir = "0.3.7"
